<resources>
    <string name="app_name">InstantFlix</string>
    <string name="something_went_network_connection">Something went wrong, verify your internet connection</string>
    <string name="info">Info</string>
    <string name="popular_movies">Popular movies</string>
    <string name="popular_tv_shows">Popular tv shows</string>
    <string name="top_rated_movie">Top rated movies</string>
    <string name="top_rated_tv_shows">Top rated tv shows</string>
    <string name="tv_shows">TV SHOW</string>
    <string name="movie">MOVIE</string>
</resources>