package com.theblackbit.instantflix.core.utils

object TestTags {
    const val IMAGE_POSTER_TAG = "imagePosterTag"
    const val POSTER_GENRES_TAG = "posterGenres"
    const val INFO_ICON_TEXT_TAG = "info_icon_test_text_tag"
    const val MOVIES_CONTAINER_TAG = "movies_container_tag"
}
